fix items not showing on mobile

--- a/static/css/imports/_index.scss
+++ b/static/css/imports/_index.scss
@@ -73,7 +73,11 @@
     &:first-of-type {
       margin-top: 2em;
     }
+  }
+}
 
+.category__item.category__item--home {
+  @include media-query(sm) {
     &:nth-of-type(1n+4) {
       display: none;
     }
